# MinesweeperSolver

./: .gitignore  README.md  development  git  index.html
AI/: CMakeLists.txt  main.cpp  tests.py
client/: index.html  package.json  webpack.config.js
client/src/: AI-game.js  bomb.ai  common.js  flag.ai  index.js  player-game.js
server/: CMakeLists.txt  main.py  server.cpp
